--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-test
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=dvice,initial-scale=1.0">
+<meta http-equiv="X-UA-compatible" content="ie=edge">
+<title>HTMLの練習</title>
+</head>
+<body>
+    <h1>
+        将来の夢は「プログラマー」
+    </h1>
+    <h2>
+        見出し2
+    </h2>
+    <h3>
+        見出し3
+    </h3>
+    <p>
+        あいうえおかきくけこさしすせそたちつてとなにぬねの
+        はひふへほまみむめもやいゆいぇよわうぃううぇを
+        abcdefghijklmnopqrstuvwxyz
+    </p>
+    <p>
+        段落2
+    </p>
+    <ul>
+        <li>リスト1</li>
+        <li>リスト2</li>
+        <li>リスト3</li>
+        <li>リスト4</li>
+        <li>リスト5</li>
+    </ul>
+</body>
+</html>
