--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=dvice,initial-scale=1.0">
 <meta http-equiv="X-UA-compatible" content="ie=edge">
 <title>HTMLの練習</title>
+<link rel="stylesheet" type="text/css" href="index.html">
+
+</style>
 </head>
 <body>
     <h1>
@@ -19,7 +22,7 @@
     <p>
         あいうえおかきくけこさしすせそたちつてとなにぬねの
         はひふへほまみむめもやいゆいぇよわうぃううぇを
-        abcdefghijklmnopqrstuvwxyz
+        <span>abcdefghijklmnopqrstuvwxyz</span>
     </p>
     <p>
         段落2
@@ -31,5 +34,7 @@
         <li>リスト4</li>
         <li>リスト5</li>
     </ul>
+    <a href="https://google.co.jp">google</a>
+    <div>ブロックTAB</div>
 </body>
 </html>
