--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=dvice,initial-scale=1.0">
 <meta http-equiv="X-UA-compatible" content="ie=edge">
 <title>HTMLの練習</title>
-<link rel="stylesheet" type="text/css" href="index.html">
-
+<link rel="stylesheet" type="text/css" href="css/index.css">
 </style>
 </head>
 <body>
