--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <h3>
         見出し3
     </h3>
-    <p>
+    <p class="sub-title1">
         あいうえおかきくけこさしすせそたちつてとなにぬねの
         はひふへほまみむめもやいゆいぇよわうぃううぇを
         <span>abcdefghijklmnopqrstuvwxyz</span>
     </p>
-    <p>
+    <p id="sub-title2">
         段落2
     </p>
     <ul>
@@ -34,6 +34,21 @@
         <li>リスト5</li>
     </ul>
     <a href="https://google.co.jp">google</a>
-    <div>ブロックTAB</div>
+    <div class="boxtext1">aiueokakikukekosasisusesotatituteto
+        naninunenohahihuhehomamimumemoyayiyuyeyowawiwuwewo   
+    </div>
+    <div class="boxtext2">あいうえおかきくけこさしすせそたちつてとなにぬねの
+        はひふへほまみむめもやいゆいぇよわうぃううぇを
+    </div>
+    <div class="boxtext3">
+    </div>
+    <div class="boxtext4">
+    </div>
+    <div class="boxtext5">
+    </div>
+    <div class="boxtext6">
+    </div>
+    <div class="boxtext7">
+    </div>
 </body>
 </html>
